<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="pete.program.netlab.russianblue.PedometerActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="@string/length_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvLength"
                android:layout_weight="3"
                android:textStyle="normal|bold"
                android:paddingStart="10dp"
                android:paddingTop="8dp"
                android:textSize="16sp"
                android:singleLine="true"
                android:textAlignment="center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/edtLength"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:text="0.753"
                android:singleLine="true"
                android:textAlignment="center"
                android:layout_marginBottom="10dp" />

        </LinearLayout>

        <GridLayout android:layout_height="match_parent"
            android:layout_width="0dp"
            android:rowCount="2"
            android:columnCount="2"
            android:layout_weight="1.2">

            <CheckBox
                android:text="@string/wifi_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbWiFi"
                android:checked="true" />

            <CheckBox
                android:text="@string/accelerometer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbAcce"
                android:checked="true" />

            <CheckBox
                android:text="@string/gyroscope_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbGyro"
                android:checked="true" />

            <CheckBox
                android:text="@string/magnetometer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbMagn"
                android:checked="true" />
        </GridLayout>
    </LinearLayout>

    <Button
        android:text="@string/btn_titlestart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnControl" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5">
        <netlab.pete.indoor.russianblue.WalkingTrackView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/walkingTV" />
    </LinearLayout>
</LinearLayout>
